# BasicaoFullstack-End

./: LICENSE  README.md
server/: manage.py  pyproject.toml
server/app/: __init__.py  extensions.py  flask_boilerplate_main.db
server/app/controller/: livro_controller.py
server/app/model/: livro_model.py
server/app/service/: livro_service.py
server/app/util/: dto.py
server/migrations/versions/: b8c1f3fd1b69_created_livro_database.py
web-client/: .env  index.html  package-lock.json  package.json
web-client/src/: App.tsx  env.ts
web-client/src/components/addButton/: addButton.tsx
web-client/src/services/: apiFunctions.ts  serverInstance.ts
web-client/src/types/: livro.ts
web-client/src/utils/: genresArr.tsx
